samples/_failures_safe/1761212887_8e9c7b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b7d2fa44.c: In function ‘main’:
./samples/SAFE/__tmp_b7d2fa44.c:116:12: error: missing terminating " character
  116 |     printf("
      |            ^
./samples/SAFE/__tmp_b7d2fa44.c:116:5: error: expected expression at end of input
  116 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b7d2fa44.c:116:5: error: expected declaration or statement at end of input
